# local-ai-python

./: .gitignore  CHANGES_SUMMARY.md  Dockerfile  LICENSE  MAGIC_NUMBERS_REFACTORING.md  README.md  mypy.ini  pyproject.toml
.github/: copilot-instructions.md
.kiro/specs/audio-debugging/: design.md  requirements.md  tasks.md
.kiro/specs/audio-noise-filtering/: design.md  requirements.md  tasks.md
.kiro/specs/fix-audio-processing-issues/: design.md  requirements.md  tasks.md
.kiro/specs/speech-to-text/: design.md  requirements.md  tasks.md
.kiro/specs/voice-task-management/: design.md  requirements.md  tasks.md
.kiro/specs/whisper-cuda-stability-fix/: requirements.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: audio-filtering-caveats.md  audio-filtering-evaluation.md  cache_structure.md  development-guide.md  extensible_interfaces.md  task-management-configuration.md  task-management-deployment.md  task-management-guide.md
examples/: mcp_server_example.py
src/local_ai/: combined_server.py  main.py
src/local_ai/speech_to_text/: __init__.py  adaptive_optimizer.py  audio_capture.py  audio_debugger.py  cache_utils.py  cli_optimization.py  config.py  exceptions.py  interfaces.py  logging_utils.py  model_selector.py  models.py  optimization.py  optimization_cache.py  performance_monitor.py  performance_optimizer.py  pipeline.py  service.py  system_detector.py  transcriber.py  vad.py
src/local_ai/speech_to_text/audio_filtering/: __init__.py  adaptive_processor.py  audio_filter_pipeline.py  audio_normalizer.py  interfaces.py  models.py  noise_reduction.py  performance_monitor.py  spectral_enhancer.py
src/local_ai/task_management/: __init__.py  config.py  database.py  exceptions.py  interfaces.py  llm_classifier.py  mcp_server.py  models.py  task_detection_service.py  task_list_manager.py
tests/: test_cli.py  test_cli_args.py  test_local_ai.py
tests/test_data/: README.md
tests/test_speech_to_text/: __init__.py  test_adaptive_processor.py  test_audio_capture.py  test_audio_capture_filtering_integration.py  test_audio_debugger.py  test_audio_debugging_e2e.py  test_audio_filter_pipeline.py  test_audio_filtering_models.py  test_audio_normalizer.py  test_audio_synthesis_utils.py  test_confidence_integration.py  test_end_to_end_integration.py  test_extensibility_demo.py  test_integration_runner.py  test_interfaces.py  test_models.py  test_noise_reduction_engine.py  test_noisy_audio_filtering.py  test_optimization_coverage.py  test_optimization_integration.py  test_performance_integration.py  test_performance_monitor_coverage.py  test_pipeline.py  test_scripted_audio_comparison.py  test_service.py  test_service_audio_debugger.py  test_service_filtering_integration.py  test_service_pipeline_integration.py  test_simple_filtering_debug.py  test_spectral_enhancer.py  test_transcriber.py  test_transcriber_audio_debugger.py  test_transcriber_audio_processing.py  test_transcriber_confidence.py  test_transcriber_coverage.py  test_transcriber_integration.py  test_transcriber_sample_rate_fixes.py  test_transcriber_with_result.py  test_transcription_accuracy_validation.py  test_vad.py  (+2 more)
tests/test_task_management/: __init__.py  test_database.py  test_end_to_end_integration.py  test_llm_classifier.py  test_mcp_server.py  test_speech_integration.py  test_task_detection_service.py  test_task_list_manager.py  test_task_list_manager_integration.py
